Fixed logo to make name more visible

--- a/src/components/Logo/logo.module.css
+++ b/src/components/Logo/logo.module.css
@@ -7,15 +7,17 @@
   border-radius: 50px;
 }
 
+
 .Logo h3 {
-  font-size: 30px;
-  color: lightskyblue;
+  font-size: 18px;
+  color: rgb(13, 112, 173);
   margin: 2px;
 }
 
 .Logo p {
-  font-size: 18px;
-  color: slategrey;
+  font-size: 14px;
+  color: rgb(61, 67, 73);
   margin: 2px;
   height: 100%;
 }
+
